# kasi_flavour

./: README.md  deploy.ps1  models_dump.txt  pyproject.toml  requirements.txt
backend/: .env  database.py  main.py  pyproject.toml  requirements.txt  storage.py
backend/models/: models.py
backend/routers/: auth.py  deliveries.py  menus.py  orders.py  recommend.py  tracking.py  users.py
backend/schemas/: schemas.py
frontend/: admin.html  driver.html  index.html  login.html  orders.html  seller.html  service-worker.js  track.html
frontend/css/: main.css
frontend/js/: api.js  cart.js  menus.js
frontend/pages/: index.html  seller.html  track.html
ml/: ML_README.md  model.pkl  recommend.py  requirements_ml.txt  retrain_scheduler.py  train.py  training_report.json
