[project]
name = "kasi-flavour"
version = "1.0.0"
description = "Kasi Flavour"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "fastapi[standard]>=0.139.0",
    "uvicorn[standard]>=0.35.0",
    "gunicorn>=22.0.0",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0.30",
    "pymysql>=1.1.0",
    "greenlet>=3.1",
    "bcrypt>=4.1.3",
    "python-jose[cryptography]>=3.3.0",
    "pydantic[email]>=2.9.0",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "scikit-learn>=1.4.2",
    "websockets>=12.0",
]

[tool.fastapi]
entrypoint = "backend.main:app"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"